# v4l2-camera

./: .gitignore  CMakeLists.txt  Makefile  aarch64-toolchain.cmake  camera.c  camera.h  helper.c  helper.h  main.c
build-aarch64/: video4linux2_rpi
include/: apriltag_detection.h  camera.h  helper.h
src/: apriltag_detection.c  camera.c  camera.h  helper.c  helper.h  main.c
tests/: apriltag_detection_tests.c
